feat: migrate to scss

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fliqlo</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="stylesheet" href="./src/styles.scss" />
     <link rel="stylesheet" href="./src/flip_animation.css" />
   </head>
 
