--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fliqlo</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="./src/styles.scss" />
     <link rel="stylesheet" href="./src/flip_animation.css" />
+    <link rel="stylesheet" href="./src/styles.scss" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
@@ -17,6 +18,9 @@
           <input type="checkbox" class="plus-minus" id="checkbox" />
         </label>
       </div>
+      <a href="https://github.com/justforuse/fliqlo" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
     </header>
 
     <div class="line"></div>
