--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Fliqlo screensaver in browser" />
+    <meta name="keywords" content="Fliqlo, Screensaver" />
     <title>Fliqlo</title>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/iconfont/iconfont.css" />
     <link rel="stylesheet" href="./src/flip_animation.css" />
     <link rel="stylesheet" href="./src/styles.scss" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <header>
-      <div class="theme-switcher">
-        <label class="theme-switch" for="checkbox">
-          <input type="checkbox" class="plus-minus" id="checkbox" />
-        </label>
-      </div>
+      <i class="theme light-theme i carbon:sun"></i>
+      <i class="theme dark-theme i carbon:moon"></i>
       <a href="https://github.com/justforuse/fliqlo" target="_blank">
-        <i class="fa-brands fa-github"></i>
+        <i class="i carbon:logo-github"></i>
       </a>
     </header>
 
